# AIGODLIKE-ComfyUI-Studio

./: .gitignore  README.md  __init__.py  model-config.json  pyproject.toml  test.json  utils.py
.github/workflows/: publish_action.yml
loader/: blueprints.js  common.js  enterLoader.js  index.html
loader/components/home/classification/: index.css  index.js  index.less
loader/components/home/foot/: index.css  index.js  index.less
loader/components/home/head/: index.css  index.js  index.less
loader/components/home/model/: index.css  index.js  index.less
loader/components/home/model/detail/: index.css  index.js  index.less
loader/components/left/: index.css  index.js  index.less
loader/components/public/: confirmBox.js  hoverMenu.js  iconRenderer.js  message.js
loader/components/settings/language/: index.css  index.js  index.less
loader/components/settings/modelShielding/: index.css  index.js  index.less
loader/components/settings/shortcut/: index.css  index.js  index.less
loader/components/settings/windowing/: index.css  index.js  index.less
loader/pages/home/: home.css  home.js  home.less
loader/pages/settings/: index.css  index.js  index.less
loader/router/: index.js
loader/static/css/: iconfont.css  index.css  index.less
loader/static/js/: confirm.js  i18n.js  message.js  public.js  vue-i18n.js  vue-router.js  vue.js  vuex.js
loader/store/: config.js  index.js  prop.js
web/js/loader/: enterLoader.js
web/js/loader/router/: index.js
web/js/loader/static/js/: i18n.js
web/js/loader/store/: config.js
workflow/: checkpoints_def.json
(+40 files in other folders)
